Switched to BHY terms, added virtual sensor enable

--- a/FirmwareV0.11/components/bhi360/CMakeLists.txt
+++ b/FirmwareV0.11/components/bhi360/CMakeLists.txt
@@ -4,6 +4,5 @@ file(GLOB_RECURSE BHI360_SRC
 
 idf_component_register(
     SRCS ${BHI360_SRC}
-    INCLUDE_DIRS "." "firmware/bhi360" "common"
-    PRIV_INCLUDE_DIRS "firmware" 
+    INCLUDE_DIRS "." "firmware/bhi360"
 )
