Some simple updates
Mostly in Data Collection

--- a/DataCollection/components/imu/CMakeLists.txt
+++ b/DataCollection/components/imu/CMakeLists.txt
@@ -1,7 +1,7 @@
 idf_component_register(
     SRCS
-        "imu_mpu6050.c"
-        "imu_mpu9250.c"
+        imu_common.c
+        imu_mpu6050.c
+        imu_mpu9250.c
     INCLUDE_DIRS "."
-    REQUIRES driver
 )
